# CUA-Agent-Debugger

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
debugger/: COMMANDS_DEBUGGER.md  __init__.py  __main__.py  agent.py  config.py  discuss.py  dispatch.py  ingester.py  openai_adapter.py  perplexity_adapter.py  prompts.py  prompts_discuss.py  rca.py  tagger.py  taxonomy.py  together_adapter.py  trajectory.py  trajectory_normalizer.py
debugger/config/: debugger.example.json
debugger/eval/: __init__.py  accuracy.py
debugger/evolving/: __init__.py  alignment.py  case_loader.py  prompts.py  protocol.py  runner.py  state.py  tools.py
debugger/memory/: __init__.py  annotation_loader.py  distill.py  episode_memory.py  intention.py  lesson_injector.py  lesson_memory.py  semantic_merge.py
debugger/pipeline/: __init__.py  classify.py  client_factory.py  orchestrator.py  results.py  runtime.py  worker.py
scripts/: download_input_trajectory.py
tests/: test_annotation_loader.py  test_build_error_context.py  test_debugger_app_annotation_only.py  test_distill.py  test_download_input_trajectory.py  test_episodic_schema_v2.py  test_evolving_alignment.py  test_evolving_case_loader.py  test_evolving_prompts_and_tools.py  test_evolving_protocol.py  test_evolving_runner.py  test_intention.py  test_lesson_explorer_tools.py  test_lesson_injector.py  test_lesson_validator.py  test_make_client.py  test_multi_debugger_refs.py  test_perplexity_adapter.py  test_rca_lesson_injection.py  test_semantic_merge.py  test_trajectory_normalizer.py
(+158 files in other folders)
